# llm-d-latency-predictor

./: Dockerfile.konflux.prediction  Dockerfile.konflux.test  Dockerfile.konflux.training  OWNERS  build-deploy.sh  pyproject.toml  requirements-konflux.txt  requirements.txt
.github/workflows/: build-image.yaml
.tekton/: README.md  odh-latency-predictor-prediction-pull-request.yaml  odh-latency-predictor-prediction-v3-5-push.yaml  odh-latency-predictor-test-v3-5-push.yaml  odh-latency-predictor-training-pull-request.yaml  odh-latency-predictor-training-v3-5-push.yaml
deploy/: dual-server-deployment.yaml  test-dual-server-deployment.yaml
tests/: test_dual_server_client.py
training/: training_server.py
