[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-d-latency-predictor"
version = "0.1.0"
description = "Latency prediction service for the llm-d ecosystem"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "scikit-learn",
    "numpy",
    "pandas",
    "joblib",
    "pydantic",
    "requests",
    "xgboost",
    "lightgbm",
    "orjson",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Minimal pragmatic selection for imported scientific/ML code.
# Stricter rules (N, B, S, RET, SIM, C4, A) can be layered in via follow-up
# PRs once the imported code has been refactored.
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes — real bugs (undefined names, etc.)
    "I",     # isort — import ordering
    "UP",    # pyupgrade — modern syntax
]
ignore = [
    "E501",  # line too long — imported code has many lines slightly over 120
    "F401",  # unused imports — try/except capability-detection pattern (xgboost/lightgbm)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
index-url = "https://packages.redhat.com/api/pypi/public-rhai/rhoai/3.5-EA2/cpu-ubi9/simple/"
environments = [
    "platform_system == 'Linux' and platform_machine == 'x86_64'",
    "platform_system == 'Linux' and platform_machine == 'aarch64'",
]

[[tool.uv.index]]
name = "aipcc"
url = "https://packages.redhat.com/api/pypi/public-rhai/rhoai/3.5-EA2/cpu-ubi9/simple/"
default = true

[[tool.uv.index]]
name = "aipcc-test"
url = "https://packages.redhat.com/api/pypi/public-rhai/rhoai/3.5-EA2/cpu-ubi9-test/simple/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
explicit = true
